src/test/deca/context/invalid/provided/VariableWithoutType.deca
// DESCRIPTION : Variable déclarée sans le type
//RESULTAT: Identifier must be declared ! (0.1)
{
    i = 12;
}
